--- a/ansible/roles/common/templates/base_Dockerfile.j2
+++ b/ansible/roles/common/templates/base_Dockerfile.j2
@@ -2,10 +2,6 @@ FROM phusion/passenger-ruby22
 MAINTAINER datawire.io <hello@datawire.io>
 
 COPY . /img_build
-RUN cp /img_build/bin/bakerconf.py /bin/bakerconf
-RUN cp /img_build/init/10_bakerconf.sh /etc/my_init.d/10_bakerconf.sh
-RUN chmod +x /bin/bakerconf
-RUN chmod +x /etc/my_init.d/10_bakerconf.sh
 
 RUN curl -s {{ datawire_repository_url }} | bash
 RUN apt-get install -y\
@@ -14,6 +10,11 @@ RUN apt-get install -y\
  datawire-watson\
  python-pip
 
-RUN yes | pip install docopt
+RUN yes | pip install docopt docker-py
+
+RUN cp /img_build/bin/bakerconf.py /bin/bakerconf
+RUN cp /img_build/init/10_bakerconf.sh /etc/my_init.d/10_bakerconf.sh
+RUN chmod +x /bin/bakerconf
+RUN chmod +x /etc/my_init.d/10_bakerconf.sh
 
 RUN rm -rf /img_build
