"Karma!" renamed to "Karma Points!"

--- a/src/lobsters/app/views/home/most_popular.html.erb
+++ b/src/lobsters/app/views/home/most_popular.html.erb
@@ -1,4 +1,4 @@
-<h2>The Most Popular Users (by Karma!)</h2>
+<h2>The Most Popular Users (by Karma Points!)</h2>
 
 <p><strong>Service ID:</strong> <%= @service_id %> <%= @service_status %></p>
 <p><strong>Query Speed:</strong> <%= @query_time %>ms</p>
